fixed incident card overflow

--- a/app/assets/stylesheets/pages/incidents/show.scss
+++ b/app/assets/stylesheets/pages/incidents/show.scss
@@ -4,6 +4,7 @@
     background-color: #333333;
     border-radius: 16px;
     font-family: $roboto;
+    overflow: hidden;
 
     h1 {
       color: rgb(247, 247, 247);
